[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://WallSpawner.gd" type="Script" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://BoxSpawner.gd" type="Script" id=4]

[node name="World" type="Node2D"]
position = Vector2( 0, -1.36038 )
script = ExtResource( 3 )
scroll_speed = 200

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 300, 440 )
max_accelartion = 20.0
drag = 0.1
acceleration_delta = 1.0
bounce = 1.5

[node name="WallSpawner" type="Node2D" parent="."]
script = ExtResource( 2 )
poll_interval = 1.0
time_between_spawn = 3.0

[node name="BoxSpawner" type="Node2D" parent="."]
script = ExtResource( 4 )
time_between_spawn = 1.2

[node name="ScrollSpeedTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="off_screen" from="Player" to="." method="_on_Player_off_screen"]
[connection signal="created_wall" from="WallSpawner" to="." method="_on_WallSpawner_created_wall"]
[connection signal="created_boxes" from="BoxSpawner" to="." method="_on_BoxSpawner_created_boxes"]
[connection signal="timeout" from="ScrollSpeedTimer" to="." method="_on_ScrollSpeedTimer_timeout"]
